# asar

./: README.md  pyproject.toml
src/asar/: __init__.py  __main__.py  base.py
src/asar/cli/: extract.py  list.py  pack.py
src/asar/file/: base.py
src/asar/integrity/: base.py  checker.py  sha256.py
src/asar/models/: file.py  folder.py  integrity.py  metainfo.py
tests/: conftest.py
tests/asar/: conftest.py  test___init__.py  test_base.py
tests/asar/cli/: test_extract.py  test_list.py  test_pack.py
tests/asar/file/: conftest.py  test_file_base.py
tests/asar/integrity/: conftest.py  test_checker.py  test_integrity_base.py  test_sha256.py
tests/asar/models/: test_file.py  test_folder.py  test_integrity.py
tests/fixtures/: asar_path.py
