[project]
name = "asar"
description = "Operate asar archive in a convient way without nodejs installed."
authors = [
    {name = "Zhang Hua", email = "zhanghua.00@qq.com"},
]
dependencies = []
requires-python = ">=3.10"
readme = "README.md"
license = {text = "LicenseRef-WTFPL"}
dynamic = ["version"]

[project.scripts]
asar = "asar.__main__:main"

[tool.pdm]
distribution = true

[tool.pdm.dev-dependencies]
test = [
    "pytest>=8.3.2",
    "pytest-cov>=5.0.0",
    "pytest-ruff>=0.4.1",
]

[tool.pdm.version]
source = "file"
path = "src/asar/__init__.py"

[build-system]
requires = ["pdm-backend"]
build-backend = "pdm.backend"

[tool.basedpyright]
venvPath="."
venv=".venv"
reportMissingImports = true
pythonPlatform = "All"
typeCheckingMode = "strict"
useLibraryCodeForTypes = true
# diagnostic rules
strictListInference = true
strictDictionaryInference = true
strictSetInference = true
reportMissingTypeStubs = "warning"
reportImportCycles = true
reportUninitializedInstanceVariable = "warning"
reportCallInDefaultInitializer = "warning"
reportImplicitStringConcatenation = true
reportUnusedCallResult = "information"
reportUnnecessaryTypeIgnoreComment = "information"
reportImplicitOverride = "information"
reportShadowedImports = "information"

[tool.pytest.ini_options]
addopts = "--cov=src/asar --ruff"
required_plugins = "pytest-ruff pytest-cov"

[tool.ruff]
builtins = ["_"]
line-length = 100
extend-exclude = ["__pycache__"]
output-format = "github"
required-version = ">=0.3.4"

[tool.ruff.lint]
preview = true
select = [
    "F", # Pyflakes
    "E", "W", # pycodestyle, Error, Warning
    "I", # isort
    "N", # pep8-naming
    "D", # pydocstyle
    "ANN", # flake8-annotations
    "ASYNC", # flake8-async
    "S", # flake8-bandit
    "B", # flake8-bugbear
    "A", # flake8-builtins
    "COM", # flake8-commas
    "C4", # flake8-comprehensions
    "ISC", # flake8-implicit-str-concat
    "T20", # flake8-print
    "PT", # flake8-pytest-style
    "Q", # flake8-quotes
    "RSE", # flake8-raise
    "RET", # flake8-return
    "SIM", # flake8-simplify
    "ARG", # flake8-unused-arguments
    "PTH", # flake8-use-pathlib
    "FIX", # flake8-fixme
    "ERA", # eradicate
    "PL", # Pylint
    "R", # Refactor
    "FLY", # flynt
    "FURB", # refurb
    "LOG", # flake8-logging
    "RUF" # Ruff specific
]
ignore = [
    "ANN101", # type for self
    "ANN102", # type for cls
    "FIX002", # todo is not critical
    "S101" # assert in code
]

[tool.ruff.lint.per-file-ignores]
# Using print is required to build cli interface.
"src/asar/__main__.py" = ["T201"]
"src/asar/cli/list.py" = ["T201"]
# There are indeed so many arguments.
# placeholder module with unused arguments.
"src/asar/cli/pack.py" = ["PLR0913", "PLR0917", "ARG001"]
# Using subprocess to call @electron/asar
"tests/fixtures/asar_path.py" = ["S603", "S404"]

[tool.ruff.lint.flake8-annotations]
allow-star-arg-any = true
mypy-init-return = true
suppress-dummy-args = true
suppress-none-returning = true

[tool.ruff.lint.isort]
force-single-line = true
length-sort = true
lines-after-imports = 2
no-sections = true

[tool.ruff.lint.pycodestyle]
max-doc-length = 100
max-line-length = 100

[tool.ruff.lint.pydocstyle]
convention = "google"

[tool.ruff.format]
docstring-code-format = true
